Update page with new book when modal form is submitted

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <dialog id="dialog">
-        <form method="dialog">
+        <form method="dialog" id="book-form">
             <label>Title: 
-                <input type="text" required>
+                <input type="text" id="book-title" required>
             </label>
             <label>Author: 
-                <input type="text" required>
+                <input type="text" id="book-author" required>
             </label>
             <label>No. of Pages: 
-                <input type="text">
+                <input type="text" id="book-pages">
             </label>
             <label>Read? 
-                <input type="checkbox">
+                <input type="checkbox" id="book-read">
             </label>
             <menu>
                 <button type="submit">Submit</button>
