--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             </menu>
         </form>
     </dialog>
-    <h1>Library</h1>
+    <div class="header">
+        <img src="assets/icons8-bookshelf-60.png" alt="bookshelf" class="header-icon">
+        <div class="header-text">Book-Shelf</div>
+    </div>
     <button id="open-dialog">New Book</button>
     <div class="bookContainer"></div>
 </body>
